k8s-sample/network/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:   #incase you want restriction on env level
        matchLabels:
          name: prod
      podSelector:
        matchLabels:
          name: api-pod
    -ipBlock:   #allow from a range of IP
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
